Remove reminiscense from pivovar project
pivovar project was used as a donor of some files. Some remainings from
the pivovar projects needs to be removed.

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,12 +14,15 @@ license = GNU GPL3
 classifier =
     Development Status :: 1 - Planning
     Environment :: Console
-    Intended Audience :: Manufacturing
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+    Intended Audience :: Developers
     Operating System :: OS Independent
     Programming Language :: Python
+    Programming Language :: Ruby
+    Topic :: Software Development :: Debuggers
+    Environment :: Plugin
 keywords =
-    brewery
+    gdb plugin
 
 [entry_points]
 console_scripts =
