--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ author-email = jhenner@redhat.com
 summary = Make debugging of programs written in various languages easy.
 description-file = README.md
 description-content-type = text/x-rst; charset=UTF-8
-;home-page = https://launchpad.net/pbr
+home-page = https://github.com/jaryn/gdbplugins
 ;project_urls =
 ;    Bug Tracker = https://bugs.launchpad.net/pbr/
 ;    Documentation = https://docs.openstack.org/pbr/
@@ -20,7 +20,6 @@ classifier =
     Programming Language :: Python
     Programming Language :: Ruby
     Topic :: Software Development :: Debuggers
-    Environment :: Plugin
 keywords =
     gdb plugin
 
