--- a/setup.cfg
+++ b/setup.cfg
@@ -23,10 +23,13 @@ classifier =
 keywords =
     gdb plugin
 
-[entry_points]
-console_scripts =
-    _gdbplugin_loader = gdbplugin.loader:load_plugins
+[files]
+packages =
+    gdbplugin
+data_files =
+    etc/gdbinit.d = gdbplugin_loader.py
 
+[entry_points]
 gdb.plugins =
     python = gdbplugin.python:main
     ruby = gdbplugin.ruby:main
