Add gdbplugin package.

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,10 @@ classifier =
 keywords =
     gdb plugin
 
+[files]
+packages =
+    gdbplugin
+
 [entry_points]
 console_scripts =
     _gdbplugin_loader = gdbplugin.loader:load_plugins
