--- a/setup.cfg
+++ b/setup.cfg
@@ -26,11 +26,10 @@ keywords =
 [files]
 packages =
     gdbplugin
+data_files =
+    etc/gdbinit.d = gdbplugin_loader.py
 
 [entry_points]
-console_scripts =
-    _gdbplugin_loader = gdbplugin.loader:load_plugins
-
 gdb.plugins =
     python = gdbplugin.python:main
     ruby = gdbplugin.ruby:main
