--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,3 +47,39 @@ jobs:
 #    secrets:
 #      GDBPLUGINS_DOCKERHUB_USER: ${{ secrets.GDBPLUGINS_DOCKERHUB_USER }}
 #      GDBPLUGINS_DOCKERHUB_TOKEN: ${{ secrets.GDBPLUGINS_DOCKERHUB_TOKEN }}
+  # https://github.com/marketplace/actions/alls-green#why
+
+  check:  # This job does nothing and is only used for the branch protection
+    if: always()
+
+    needs:
+      - markdown-link-check
+      - pip-install-test
+      - pre-commit
+      - test-fedora
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Decide whether the needed jobs succeeded or failed
+      uses: re-actors/alls-green@release/v1
+      with:
+#        allowed-failures: integration  # can be flaky
+        jobs: ${{ toJSON(needs) }}
+
+  release:
+    needs:
+      - check
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+      - name: Release
+        run: |
+            pip install twine
+            python -c "import shutil; shutil.rmtree('dist', ignore_errors=True)"
+            python -m build
+            python -m twine upload dist/*
+        env:
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
