--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,9 +54,9 @@ jobs:
 
     needs:
       - markdown-link-check
-#      - pip-install-test
-#      - pre-commit
-#      - test-fedora
+      - pip-install-test
+      - pre-commit
+      - test-fedora
 
     runs-on: ubuntu-latest
 
