--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,16 +2,13 @@
 name: Release
 
 on:
-  push:
-    tags:
-      - '*.*.*'
+  release:
+  types: [published]
 
 jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs:
-      - check
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
